--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,11 +1,18 @@
 body {
+  background-color: #fff !important;
   font-size: .875rem;
+  max-width: 100% !important;
+  padding: 0 !important;
 }
 
 .feather {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
+}
+
+html, body, .main {
+  height: 100%;
 }
 
 /*
@@ -68,6 +75,16 @@ body {
 /*
  * Navbar
  */
+ 
+header .navbar-nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    
+    a:visited {
+		color: #5f9ea0;
+	}
+}
 
 .navbar-brand {
   padding-top: .75rem;
@@ -110,4 +127,215 @@ body {
 #deleteError {
   visibility: hidden;
   color: red;
+}
+
+.nav.flex-column, .nav-sidebar, .main-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  display: flex !important;
+  justify-content: space-between;
+}
+
+.navbar-brand {
+  background: transparent;
+  box-shadow: none;
+  padding-top: 15px;
+  margin-left: 20px;
+  padding-bottom: 10px;
+}
+
+.navbar-brand img {
+  margin-bottom: 0;
+}
+
+.nav-sidebar {
+  width: 16.66666667%;
+  background-color: #f8f9fa !important;
+}
+
+.main-column {
+  flex-grow: 1;
+  background: #fff;
+  padding: 0 20px 20px;
+}
+
+header {
+  background: #212529 !important;
+}
+
+header .nav-item {
+  display: flex;
+  justify-content: space-around;
+  width: 220px;
+}  
+a.navbar-brand:hover {
+  border-bottom: inherit !important;
+}
+h3, #sidebarMenu, .copyright {
+  padding: 0 15px 10px 15px;
+}
+.copyright, .credit {
+  font-size: .7em;
+}
+nav .nav {
+  padding-left: 0;
+}
+nav .nav-item {
+  list-style-type: none;
+}
+input[name='title'], input[name='slug'] {
+  width: 50%;
+}
+.main {
+  display: flex;
+}
+
+#contentHelp, #titleHelp, #slugHelp {
+  font-size: 10px;
+}
+
+.form-check {
+  display: flex;
+}
+
+.small {
+  font-size: small;
+}
+
+.nav-sidebar .nav-link.active {
+    color: #2470dc;
+}
+
+.humbleicons--times {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-width='2' d='M6 18L18 6m0 12L6 6'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.humbleicons--check {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m5 14l4 4L19 8'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.mdi-light--delete {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M18 19a3 3 0 0 1-3 3H8a3 3 0 0 1-3-3V7H4V4h4.5l1-1h4l1 1H19v3h-1zM6 7v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V7zm12-1V5h-4l-1-1h-3L9 5H5v1zM8 9h1v10H8zm6 0h1v10h-1z'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.humbleicons--pencil {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m13.5 7.5l3 3M4 20v-3.5L15.293 5.207a1 1 0 0 1 1.414 0l2.086 2.086a1 1 0 0 1 0 1.414L7.5 20z'/%3E%3C/svg%3E");
+  background-color: currentColor;
+  -webkit-mask-image: var(--svg);
+  mask-image: var(--svg);
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+}
+
+.pagination,pagination-center {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+}
+
+.page-link {
+	padding: .375rem .75rem;
+	position: relative;
+    display: block;
+    color: #0d6efd;
+    text-decoration: none;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+}
+
+.hashLink {
+	margin-bottom: 20px;
+	
+	button {
+		background-color: #87ceeb;
+		color: #000;
+	}		
+}	
+
+.block-reveal {
+	.close-btn {
+		display: none;
+	}
+}
+
+#hashLink {
+	display: none;
+	
+	#collapseOne {
+		border: 0;
+		padding: 0;
+	}
+}
+
+#hashLink:target {
+	display: block;
+	
+	#collapseOne {
+		border: 1px solid #c0c0c0;
+		padding: 10px;
+		border-radius: 5px;
+		margin-bottom: 20px;
+	}
+	
+	.close-btn {
+		display: block;
+		position: absolute;
+		right: 7px;
+		top: 0;
+	}
+}
+
+/**
+.hashLink + .block-reveal  #hashLink{
+	display: none;
+}**/
+
+#hashLink {
+    position: relative 
 }
