--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,11 +11,31 @@ body {
   background-color: #f5f5f5;
 }
 
+body.login {
+	min-height: 507px;
+    height: 100vh;
+    padding: 0;
+    
+    .footer.copyright {
+		font-size: 12px;
+    }
+}
+
 .form-signin {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
+  background: #fff;
+  
+  input {
+	width: 100%;
+	min-height: 45px;
+  }
+  
+  button {
+	min-height: 45px;
+  }
 }
 
 .form-signin .checkbox {
